@@ -2804,7 +2804,9 @@ or prefix ARG columns."
 	(set-buffer-modified-p nil))
       (setq default-directory
 	    (file-name-as-directory
-	     (if (w3m-url-local-p url)
+	     (if (and (w3m-url-local-p url)
+		      (file-directory-p (file-name-directory
+					 (w3m-url-to-file-name url))))
 		 (file-name-directory (w3m-url-to-file-name url))
 	       w3m-profile-directory)))
       (w3m-arrived-add orig w3m-current-title nil nil cs)
